manifest/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: k8s-test-app
spec:
  selector:
    app: backend
  ports:
    - port: 5000
      targetPort: 5000
