manifest/traefik-default-frontend.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: default-frontend
  namespace: k8s-test-app
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: PathPrefix(`/`)
      kind: Rule
      services:
        - name: frontend
          port: 80
